--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,7 @@ TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
+
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+SigningCertificate=iPhone Developer: Austin Mack (66J2ATGBYM)
+
