Committing Most Recent Information

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,3 +79,6 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 SigningCertificate=iPhone Developer: Austin Mack (66J2ATGBYM)
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+bPackageDataInsideApk=True
+
