--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=DFB55D2B4847D796F4C3EFA929E6115F
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+ForDistribution=True
+
