Changes to build

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,6 @@
 ProjectID=DFB55D2B4847D796F4C3EFA929E6115F
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_Shipping
-ForDistribution=True
+BuildConfiguration=PPBC_Development
+ForDistribution=False
 
