Final(ish) build

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -82,3 +82,7 @@ SigningCertificate=iPhone Developer: Austin Mack (66J2ATGBYM)
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bPackageDataInsideApk=True
 
+[/Script/HTML5PlatformEditor.HTML5TargetSettings]
+HeapSizeDevelopment=1024
+HeapSizeShipping=1024
+
